force-app/main/default/objects/Medical_Facility__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Address record for the facility</description>
    <label>Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Medical Facilities</relationshipLabel>
    <relationshipName>Medical_Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>