force-app/main/default/objects/Medical_Facility__c/fields/Closing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Closing_Hours__c</fullName>
    <description>Closing hours of the facility</description>
    <label>Closing Hours</label>
    <type>Time</type>
</CustomField>