force-app/main/default/objects/Medical_Facility__c/fields/Medical_Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Address__c</fullName>
    <description>Adres placowki medycznej</description>
    <label>Medical Facility Address</label>
    <type>Address</type>
</CustomField>