force-app/main/default/objects/Medical_Facility__c/fields/Medical_Facility_Code__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Code__c</fullName>
    <description>Unique facility identifier</description>
    <displayFormat>FAC-{0000}</displayFormat>
    <label>Medical Facility Code</label>
    <type>AutoNumber</type>
</CustomField>