force-app/main/default/objects/Medical_Facility__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <description>Opening hours of the facility</description>
    <label>Opening Hours</label>
    <type>Time</type>
</CustomField>