force-app/main/default/objects/Medical_Facility__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number of the facility</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>