force-app/main/default/objects/Medical_Facility__c/fields/Requires_insurance__c.field-meta.xml
<CustomField>
    <fullName>Requires_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires insurance</label>
    <type>Checkbox</type>
</CustomField>