force-app/main/default/objects/Medical_Facility__c/validationRules/Hours_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Closing_Hours__c)), 
NOT(ISBLANK(Opening_Hours__c)), 
Closing_Hours__c &lt;= Opening_Hours__c)</errorConditionFormula>
    <errorMessage>Closing Hours must be later than Opening Hours.</errorMessage>
</ValidationRule>