force-app/main/default/objects/Medical_Facility__c/validationRules/Required_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_City</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Medical_Facility_Address__City__s )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_Address__City__s</errorDisplayField>
    <errorMessage>City of Medical Facility is required</errorMessage>
</ValidationRule>