force-app/main/default/objects/Medical_Facility__c/validationRules/Required_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_country</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(Medical_Facility_Address__CountryCode__s) )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_Address__CountryCode__s</errorDisplayField>
    <errorMessage>Country of Medical Facility is required</errorMessage>
</ValidationRule>