force-app/main/default/objects/Medical_Facility__c/validationRules/Required_PostalCode.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_PostalCode</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Medical_Facility_Address__PostalCode__s )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_Address__PostalCode__s</errorDisplayField>
    <errorMessage>Postal Code of Medical Facility is required</errorMessage>
</ValidationRule>