force-app/main/default/objects/Medical_Facility__c/validationRules/Required_State_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_State_Code</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( TEXT(Medical_Facility_Address__StateCode__s) )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_Address__StateCode__s</errorDisplayField>
    <errorMessage>State Code of Medical Facility is required</errorMessage>
</ValidationRule>