force-app/main/default/objects/Medical_Facility__c/validationRules/Required_Street.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Street</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Medical_Facility_Address__Street__s )</errorConditionFormula>
    <errorDisplayField>Medical_Facility_Address__Street__s</errorDisplayField>
    <errorMessage>Street of Medical Facility</errorMessage>
</ValidationRule>